# omni-article-markdown

./: .gitignore  AGENTS.md  AGENT_NOTES.md  Dockerfile  Makefile  README.docker.md  README.md  pyproject.toml  requirements.txt  ruff.toml  task.md
.agents/skills/extractor-developer/: SKILL.md
.agents/skills/reader-developer/: SKILL.md
.claude/: .gitignore
.github/workflows/: docker-publish.yml  manual_publish.yml  publish.yml  publish_plugin.yml
plugins/omnimd-browser-reader/: browser.py  pyproject.toml
plugins/omnimd-freedium-reader/: freedium.py  pyproject.toml
plugins/omnimd-toutiao-reader/: pyproject.toml  toutiao.py
plugins/omnimd-zhihu-reader/: pyproject.toml  zhihu.py
scripts/: fetch_url.py  fetch_url_playwright.py  log_js_request.py
skills/reader-developer/: SKILL.md
src/: html_md_parser.py  omni_article_md.py  omni_article_md_cli.py  utils.py
src/omni_article_markdown/: __init__.py  article.py  cli.py  extractor.py  hookspecs.py  html_md_parser.py  http_client.py  launch_playwright.py  omni_article_md.py  omni_article_md_cli.py  parser.py  pip_install.py  plugins.py  reader.py  readers.py  reporter.py  store.py  utils.py
src/omni_article_markdown/extractors/: 163.py  aliyun_developer.py  android_dev_blog.py  anthropic.py  apple_developer.py  appledev.py  baijiahao.py  cf_blog.py  claude_doc.py  cloudflare_blog.py  cnblog.py  dropbox_tech.py  feishu.py  feishu_doc.py  freedium.py  googleblog.py  hackernoon.py  hugo.py  huxiu.py  infoq.py  infoqcn.py  jetbrains_blog.py  jianshu.py  juejin.py  linkedin_blog.py  medium.py  microsoft_learn.py  oschina.py  quantamagazine.py  (+13 more)
tests/: conftest.py  test_extractor.py  test_parser.py  test_utils.py
(+17 files in other folders)
